--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Zeeshi, portfolio, zeeshi, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
-    <meta name="description" content="Welcome to Zeeshi's Portfolio. Full-Stack Web Developer" />
+    <meta name="keywords" content="Yousha, portfolio, yousha, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
+    <meta name="description" content="Welcome to Yousha's Portfolio. Full-Stack Web Developer" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- Font Awesome -->
@@ -47,7 +47,7 @@
 
     <div class="content">
       <br><br>
-    <h2>Hi There,<br/> I'm Yousha <span>Khan</span></h2>
+    <h2>Hi There,<br/> I'm Yousha <span></span></h2>
     <p>i am a <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
@@ -94,6 +94,7 @@
             <div class="box">
             Yousha
               <p><span> email : </span> youshaaitezaz0777@gmail.com</p>
+              <p><span> contact : </span> 0322-2176110</p>
               <p><span> place : </span> Karachi, Pakistan</p>
             </div>
         </div>
